-Created invoice query and views for Internal accounts. -Updated Summarized Invoice query to show departmentCode on misc items, if available. -Handle edge case on mangled invoice header. -Created Invoiced Items query for detailed invoice. -Handle edge cases on detailed invoice line items. -Show a group name header instead of service center number as a line item header on detailed invoice.

--- a/wnprc_billing/resources/views/financeManagement.html
+++ b/wnprc_billing/resources/views/financeManagement.html
@@ -44,7 +44,8 @@
                         {name: 'View Charges and Adjustments Not Yet Billed', url: LABKEY.ActionURL.buildURL('query', 'executeQuery', ctx.EHRStudyContainer, {schemaName: 'wnprc_billing', 'query.queryName': 'miscChargesNotBilledUpdate'})},
                         {name: 'Perform Billing Run', url: LABKEY.ActionURL.buildURL('ehr_billing', 'billingPipeline', null)},
                         {name: 'Enter New Charges', url: LABKEY.ActionURL.buildURL('ehr', 'dataEntryForm', ctx.EHRStudyContainer, {formType: 'Charges'})},
-                        {name: 'Invoice', url: LABKEY.ActionURL.buildURL('query', 'executeQuery', null, {schemaName: 'ehr_billing', 'query.queryName': 'invoiceExternal'})}
+                        {name: 'Invoice External', url: LABKEY.ActionURL.buildURL('query', 'executeQuery', null, {schemaName: 'ehr_billing', 'query.queryName': 'invoiceExternal'})},
+                        {name: 'Invoice Internal', url: LABKEY.ActionURL.buildURL('query', 'executeQuery', null, {schemaName: 'ehr_billing', 'query.queryName': 'invoiceInternal'})}
                     ].concat(issuesContainer ? [{name: 'Finance Issue Tracker', url: LABKEY.ActionURL.buildURL('issues', 'begin', issuesContainer)}] : [])
                 },{
                     header: 'Reference Tables',
