Redo 'Estimated Charges By Project' to give a better/fuller view of the billing period, with filtering based on query and project or account. Report is now named 'View Billing Queries'.

--- a/wnprc_billing/resources/views/viewBillingQuery.view.xml
+++ b/wnprc_billing/resources/views/viewBillingQuery.view.xml
@@ -1,4 +1,4 @@
-<view xmlns="http://labkey.org/data/xml/view" title="Billing Period Summary By Project" frame="none">
+<view xmlns="http://labkey.org/data/xml/view" title="View Billing Queries" frame="none">
     <dependencies>
         <dependency path="ehr.context" />
         <dependency path="ehr_billing/BillingUtils.js" />
