--- a/wnprc_billing/resources/views/customDataAccessUpsertPage.html
+++ b/wnprc_billing/resources/views/customDataAccessUpsertPage.html
@@ -86,6 +86,7 @@
                 displayField: 'DisplayName',
                 valueField: 'UserId',
                 value: userId,
+                queryMode: 'local',
                 store: {
                     type: 'labkey-store',
                     schemaName: 'coreLinked',
@@ -102,6 +103,7 @@
                 displayField: 'lastName',
                 valueField: 'rowid',
                 value: investigatorId,
+                queryMode: 'local',
                 store: {
                     type: 'labkey-store',
                     schemaName: 'ehrLinked',
