--- a/wnprc_billing/resources/views/customDataAccessUpsertPage.html
+++ b/wnprc_billing/resources/views/customDataAccessUpsertPage.html
@@ -132,6 +132,7 @@
                 name: 'project',
                 displayField: 'project',
                 value: project,
+                queryMode: 'local',
                 store: {
                     type: 'labkey-store',
                     schemaName: 'ehrLinked',
