Remove additional filter.

--- a/wnprc_billing/resources/views/customDataAccessUpsertPage.html
+++ b/wnprc_billing/resources/views/customDataAccessUpsertPage.html
@@ -134,8 +134,7 @@
                     queryName: 'project',
                     columns: 'project, investigatorId',
                     sort: 'project',
-                    autoLoad: false,
-                    additionalFilter: LABKEY.Filter.create('status_code', 1) // IN PROGRESS
+                    autoLoad: false
                 },
                 listeners : {
                     scope: this,
