Code Review changes & refactors/cleanups: - Set column title in target query.xml files instead .qview files, esp. for fk columns. - activeTierRates query update -- Filter on true instead of 'Y' - investigator field related changes -- create a new query with to derive investigator name, use that instead of lastName. Update billing queries & Data Access customized edit page to use this derived name. - Update automated test.

--- a/wnprc_billing/resources/views/customDataAccessUpsertPage.html
+++ b/wnprc_billing/resources/views/customDataAccessUpsertPage.html
@@ -100,21 +100,22 @@
                 name: 'investigatorid',
                 fieldLabel: 'Investigator',
                 allowBlank: true,
-                displayField: 'lastName',
+                displayField: 'investigatorWithName',
                 valueField: 'rowid',
                 value: investigatorId,
                 queryMode: 'local',
                 store: {
                     type: 'labkey-store',
                     schemaName: 'ehrLinked',
-                    queryName: 'investigators',
-                    columns: 'rowid, lastName',
-                    sort: 'lastname',
+                    queryName: 'investigatorsWithName',
+                    columns: 'rowid, investigatorWithName',
+                    sort: 'investigatorWithName',
                     autoLoad: true
                 },
                 listeners: {
                     change: function(field, newValue, oldValue, eOpts){
                         var projectField = field.up("form").getForm().findField("project");
+                        projectField.setValue(null);
                         var filter = LABKEY.Filter.create('investigatorId', newValue, LABKEY.Filter.Types.EQUAL);
                         projectField.store.filterArray = [filter];
                         projectField.store.load();
