Adding animal info to form data, adding cage data and navigation buttons, need to use functional updates anywhere a state is updated - especially for formdata to eliminate race conditions, need to also add a callback for focusing on certain records after nav button is pressed, double check blur/onfocus events for animal info, and finally test add removing batches to match cage data

--- a/WNPRC_EHR/src/theme/css/index.css
+++ b/WNPRC_EHR/src/theme/css/index.css
@@ -61,8 +61,13 @@
 
 .card-header {
   background-color: #e0e0e0;
+  height: 50px;
 }
 
+.card-title.h4 {
+  padding-left: 10px;
+  padding-top: 15px;
+}
 .card-body {
   padding: 1rem;
   border: 1px solid;
@@ -172,9 +177,13 @@ select[id^="restraint"] {
   border-color: #95989a !important;
 }
 
-#animal-info-empty {
+#animal-info-empty, .panel-body {
   padding: 15px;
   padding-bottom: 40px;
+}
+
+.cage-group {
+  border: 1px solid black;
 }
 
 #locations-select {
